// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTranscriptData > should exclude HTML snippets when includeHtmlSnippets is false 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation through focusable elements",
      "mode": "focus",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Button",
          "spoken": "Button",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 1,
  "totalStrategies": 1,
}
`;

exports[`buildTranscriptData > should exclude axNodes when includeAxNodes is false 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation through focusable elements",
      "mode": "focus",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Button",
          "spoken": "Button",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 1,
  "totalStrategies": 1,
}
`;

exports[`buildTranscriptData > should filter strategies based on excludeStrategies config 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation",
      "mode": "focus",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Item 0",
          "spoken": "Tab step",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
    {
      "completionReason": "focus-cycle-complete",
      "description": "Heading navigation",
      "mode": "browse",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Item 0",
          "spoken": "Heading step",
        },
      ],
      "strategyName": "heading",
      "strategyType": "heading",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 2,
  "totalStrategies": 2,
}
`;

exports[`buildTranscriptData > should filter strategies based on includeStrategies config 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation",
      "mode": "focus",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Item 0",
          "spoken": "Tab step",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
    {
      "completionReason": "focus-cycle-complete",
      "description": "Heading navigation",
      "mode": "browse",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": null,
          "identifier": "step-0",
          "index": 0,
          "itemText": "Item 0",
          "spoken": "Heading step",
        },
      ],
      "strategyName": "heading",
      "strategyType": "heading",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 2,
  "totalStrategies": 2,
}
`;

exports[`buildTranscriptData > should handle strategy results with complex axNodes 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation",
      "mode": "focus",
      "steps": [
        {
          "axNode": {
            "name": "Accept terms",
            "properties": {
              "checked": false,
              "focusable": true,
              "required": true,
            },
            "role": "checkbox",
          },
          "htmlSnippet": "<input type="checkbox" required>",
          "identifier": "checkbox-0",
          "index": 0,
          "itemText": "Accept terms",
          "spoken": "Accept terms checkbox not checked",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 1,
  "totalStrategies": 1,
}
`;

exports[`buildTranscriptData > should transform strategy results into transcript data 1`] = `
{
  "sections": [
    {
      "completionReason": "end-of-headings",
      "description": "Heading navigation",
      "mode": "browse",
      "steps": [
        {
          "axNode": {
            "name": "Welcome",
            "properties": {
              "level": 1,
            },
            "role": "heading",
          },
          "htmlSnippet": "<h1>Welcome</h1>",
          "identifier": "h1-0",
          "index": 0,
          "itemText": "Welcome",
          "spoken": "Welcome heading level 1",
        },
      ],
      "strategyName": "heading",
      "strategyType": "heading",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 1,
  "totalStrategies": 1,
}
`;

exports[`buildTranscriptData > should truncate HTML snippets based on maxHtmlSnippetLength 1`] = `
{
  "sections": [
    {
      "completionReason": "focus-cycle-complete",
      "description": "Tab navigation through focusable elements",
      "mode": "focus",
      "steps": [
        {
          "axNode": null,
          "htmlSnippet": "<div class="container"></div>...",
          "identifier": "long-html",
          "index": 0,
          "itemText": "Long content",
          "spoken": "Long content",
        },
      ],
      "strategyName": "tab",
      "strategyType": "tab",
      "totalSteps": 1,
    },
  ],
  "totalSteps": 1,
  "totalStrategies": 1,
}
`;

exports[`buildTranscriptSection > should build complete XML section from strategy results 1`] = `
"<transcript strategies="2" total_steps="3">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation through focusable elements</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="2">
            <step index="0" id="skip-link">
                <spoken>Skip to main content link</spoken>
                <item_text>Skip to main content</item_text>
                <ax_node>
                    <role>link</role>
                    <name>Skip to main content</name>
                </ax_node>
                <html_snippet><![CDATA[<a href="#main">Skip to main content</a>]]></html_snippet>
            </step>
            <step index="1" id="search-input">
                <spoken>Search edit blank</spoken>
                <item_text>Search</item_text>
                <ax_node>
                    <role>textbox</role>
                    <name>Search</name>
                    <properties focusable="true"/>
                </ax_node>
                <html_snippet><![CDATA[<input type="search" placeholder="Search...">]]></html_snippet>
            </step>
        </steps>
    </strategy>
    <strategy name="heading" type="heading" mode="browse">
        <description>Navigate through headings</description>
        <completion_reason>end-of-headings</completion_reason>
        <steps total="1">
            <step index="0" id="main-heading">
                <spoken>Welcome to Our Site heading level 1</spoken>
                <item_text>Welcome to Our Site</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Welcome to Our Site</name>
                    <properties level="1"/>
                </ax_node>
                <html_snippet><![CDATA[<h1>Welcome to Our Site</h1>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`buildTranscriptSection > should build section with all config options 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="btn-0">
                <spoken>Submit button</spoken>
                <item_text>Submit</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`buildTranscriptSection > should handle empty strategy results 1`] = `"<transcript strategies="0" total_steps="0"/>"`;

exports[`buildTranscriptSection > should handle real-world navigation transcript structure 1`] = `
"<transcript strategies="2" total_steps="7">
    <strategy name="landmark" type="landmark" mode="browse">
        <description>Navigates through ARIA landmarks using NVDA's landmark navigation (D key)</description>
        <completion_reason>end-of-landmarks</completion_reason>
        <steps total="4">
            <step index="0" id="banner-0">
                <spoken>banner landmark</spoken>
                <item_text>banner</item_text>
                <ax_node>
                    <role>banner</role>
                    <name/>
                </ax_node>
                <html_snippet><![CDATA[<header role="banner">...</header>]]></html_snippet>
            </step>
            <step index="1" id="nav-0">
                <spoken>navigation landmark Main Navigation</spoken>
                <item_text>Main Navigation</item_text>
                <ax_node>
                    <role>navigation</role>
                    <name>Main Navigation</name>
                </ax_node>
                <html_snippet><![CDATA[<nav aria-label="Main Navigation">...</nav>]]></html_snippet>
            </step>
            <step index="2" id="main-0">
                <spoken>main landmark</spoken>
                <item_text>main</item_text>
                <ax_node>
                    <role>main</role>
                    <name/>
                </ax_node>
                <html_snippet><![CDATA[<main>...</main>]]></html_snippet>
            </step>
            <step index="3" id="contentinfo-0">
                <spoken>content info landmark</spoken>
                <item_text>contentinfo</item_text>
                <ax_node>
                    <role>contentinfo</role>
                    <name/>
                </ax_node>
                <html_snippet><![CDATA[<footer>...</footer>]]></html_snippet>
            </step>
        </steps>
    </strategy>
    <strategy name="ArrowNavigation" type="arrow" mode="browse">
        <description>Linear reading through page content using Down Arrow (browse mode)</description>
        <completion_reason>end-of-document</completion_reason>
        <steps total="3">
            <step index="0" id="arrow-0">
                <spoken>link Homepage</spoken>
                <item_text>Homepage</item_text>
                <ax_node>
                    <role>link</role>
                    <name>Homepage</name>
                </ax_node>
                <html_snippet><![CDATA[<a href="/">Homepage</a>]]></html_snippet>
            </step>
            <step index="1" id="arrow-1">
                <spoken>heading level 1 Welcome</spoken>
                <item_text>Welcome</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Welcome</name>
                    <properties level="1"/>
                </ax_node>
                <html_snippet><![CDATA[<h1>Welcome</h1>]]></html_snippet>
            </step>
            <step index="2" id="arrow-2">
                <spoken>This is the introduction paragraph.</spoken>
                <item_text>This is the introduction paragraph.</item_text>
                <ax_node>
                    <role>StaticText</role>
                    <name>This is the introduction paragraph.</name>
                </ax_node>
                <html_snippet><![CDATA[<p>This is the introduction paragraph.</p>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`buildTranscriptSection > should handle strategy with empty navigation steps 1`] = `
"<transcript strategies="1" total_steps="0">
    <strategy name="heading-level-6" type="heading6" mode="browse">
        <description>Navigate through H6 headings</description>
        <completion_reason>end-of-heading-level</completion_reason>
        <steps total="0"/>
    </strategy>
</transcript>"
`;

exports[`edge cases > should handle CDATA end sequence in HTML snippet 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="cdata-edge">
                <spoken>Script content</spoken>
                <item_text>Script</item_text>
                <html_snippet>
                    <![CDATA[<script>if (arr[i]]>
                    <![CDATA[>]]>
                    <![CDATA[0) {}</script>]]>
                </html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`edge cases > should handle axNode with empty properties object 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="empty-props">
                <spoken>Button</spoken>
                <item_text>Button</item_text>
                <ax_node>
                    <role>button</role>
                    <name>Submit</name>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`edge cases > should handle steps with empty spoken phrases 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="empty-spoken">
                <spoken/>
                <item_text/>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`edge cases > should handle unicode and emoji in content 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="unicode-test">
                <spoken>🔍 Search • Búsqueda • 搜索</spoken>
                <item_text>🔍 Search</item_text>
                <ax_node>
                    <role>button</role>
                    <name>🔍 Search • Búsqueda</name>
                </ax_node>
                <html_snippet><![CDATA[<button>🔍 Search</button>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`edge cases > should handle very long identifiers 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">
                <spoken>Test</spoken>
                <item_text>Test</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > XML escaping > should escape special characters in axNode fields 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab &lt;navigation&gt; &amp; more</description>
        <completion_reason>completed</completion_reason>
        <steps total="1">
            <step index="0" id="ax-escape-test">
                <spoken>Test</spoken>
                <item_text>Test</item_text>
                <ax_node>
                    <role>link</role>
                    <name>Terms &amp; Conditions</name>
                    <description>Read our &lt;legal&gt; terms</description>
                    <value>"Important" info</value>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > XML escaping > should escape special characters in spoken text 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="escape-test">
                <spoken>Price: $10 &lt; $20 &amp; "best" deal's here</spoken>
                <item_text>Price comparison &lt;special&gt;</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > XML escaping > should escape special characters in strategy name and identifier 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="custom-strategy&lt;test&gt;" type="custom&amp;type" mode="browse">
        <description>Description with "quotes"</description>
        <completion_reason>reason with &lt;angle&gt; brackets</completion_reason>
        <steps total="1">
            <step index="0" id="id-with-&quot;quotes&quot;-&amp;-&lt;brackets&gt;">
                <spoken>Test</spoken>
                <item_text>Test</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > config options > should exclude HTML snippets when includeHtmlSnippets is false 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="step-0">
                <spoken>Button, button</spoken>
                <item_text>Button</item_text>
                <ax_node>
                    <role>button</role>
                    <name>Submit</name>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > config options > should exclude axNodes when includeAxNodes is false 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="step-0">
                <spoken>Button, button</spoken>
                <item_text>Button</item_text>
                <html_snippet><![CDATA[<button>Submit</button>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > config options > should exclude both axNodes and HTML when both are disabled 1`] = `
"<transcript strategies="1" total_steps="2">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="2">
            <step index="0" id="step-0">
                <spoken>Button, button</spoken>
                <item_text>Button</item_text>
            </step>
            <step index="1" id="step-1">
                <spoken>Link, link</spoken>
                <item_text>Link</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > empty transcript > should render empty transcript correctly 1`] = `"<transcript strategies="0" total_steps="0"/>"`;

exports[`renderTranscriptXml > multiple strategies > should render multiple strategies with mixed content 1`] = `
"<transcript strategies="3" total_steps="6">
    <strategy name="landmark" type="landmark" mode="browse">
        <description>Landmark navigation</description>
        <completion_reason>end-of-landmarks</completion_reason>
        <steps total="2">
            <step index="0" id="landmark-0">
                <spoken>banner landmark</spoken>
                <item_text>banner</item_text>
                <ax_node>
                    <role>banner</role>
                    <name/>
                </ax_node>
                <html_snippet><![CDATA[<header role="banner">...</header>]]></html_snippet>
            </step>
            <step index="1" id="landmark-1">
                <spoken>main landmark</spoken>
                <item_text>main</item_text>
                <ax_node>
                    <role>main</role>
                    <name/>
                </ax_node>
                <html_snippet><![CDATA[<main>...</main>]]></html_snippet>
            </step>
        </steps>
    </strategy>
    <strategy name="heading" type="heading" mode="browse">
        <description>Heading navigation</description>
        <completion_reason>end-of-headings</completion_reason>
        <steps total="3">
            <step index="0" id="h1-0">
                <spoken>Welcome, heading, level 1</spoken>
                <item_text>Welcome</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Welcome</name>
                    <properties level="1"/>
                </ax_node>
                <html_snippet><![CDATA[<h1>Welcome</h1>]]></html_snippet>
            </step>
            <step index="1" id="h2-0">
                <spoken>Features, heading, level 2</spoken>
                <item_text>Features</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Features</name>
                    <properties level="2"/>
                </ax_node>
                <html_snippet><![CDATA[<h2>Features</h2>]]></html_snippet>
            </step>
            <step index="2" id="h2-1">
                <spoken>Pricing, heading, level 2</spoken>
                <item_text>Pricing</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Pricing</name>
                    <properties level="2"/>
                </ax_node>
                <html_snippet><![CDATA[<h2>Pricing</h2>]]></html_snippet>
            </step>
        </steps>
    </strategy>
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="tab-0">
                <spoken>Get Started, button</spoken>
                <item_text>Get Started</item_text>
                <ax_node>
                    <role>button</role>
                    <name>Get Started</name>
                    <properties focusable="true"/>
                </ax_node>
                <html_snippet><![CDATA[<button>Get Started</button>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > single strategy with minimal steps > should render a single strategy with basic steps 1`] = `
"<transcript strategies="1" total_steps="2">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="2">
            <step index="0" id="step-0">
                <spoken>Skip to main content, link</spoken>
                <item_text>Skip to main content</item_text>
            </step>
            <step index="1" id="step-1">
                <spoken>Search, edit</spoken>
                <item_text>Search</item_text>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with HTML snippets > should render step with complex HTML containing special characters 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="complex-html-0">
                <spoken>Product card</spoken>
                <item_text>Product card</item_text>
                <html_snippet><![CDATA[<div class="card" data-price="$19.99" data-attrs='{"sale": true}'><img src="product.jpg" alt="Widget & Gadget"><span>Price: $19.99</span></div>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with HTML snippets > should render step with simple HTML snippet in CDATA 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="button" type="button" mode="browse">
        <description>Button navigation</description>
        <completion_reason>end-of-buttons</completion_reason>
        <steps total="1">
            <step index="0" id="btn-0">
                <spoken>Submit, button</spoken>
                <item_text>Submit</item_text>
                <html_snippet><![CDATA[<button type="submit" class="btn-primary">Submit</button>]]></html_snippet>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with axNode > should render step with all axNode properties 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="complex-0">
                <spoken>Complex widget</spoken>
                <item_text>Complex widget</item_text>
                <ax_node>
                    <role>treeitem</role>
                    <name>Documents</name>
                    <description>Expandable folder</description>
                    <value>5 items</value>
                    <properties focusable="true" focused="true" disabled="false" expanded="true" selected="true" checked="mixed" level="2" required="false" invalid="false"/>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with axNode > should render step with axNode description and value 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="input-0">
                <spoken>Email address, edit, required</spoken>
                <item_text>Email address</item_text>
                <ax_node>
                    <role>textbox</role>
                    <name>Email address</name>
                    <description>Enter your email for notifications</description>
                    <value>user@example.com</value>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with axNode > should render step with axNode properties 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="tab" type="tab" mode="focus">
        <description>Tab navigation</description>
        <completion_reason>focus-cycle-complete</completion_reason>
        <steps total="1">
            <step index="0" id="checkbox-0">
                <spoken>Accept terms, checkbox, not checked, required</spoken>
                <item_text>Accept terms</item_text>
                <ax_node>
                    <role>checkbox</role>
                    <name>Accept terms</name>
                    <properties focusable="true" checked="false" required="true"/>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;

exports[`renderTranscriptXml > steps with axNode > should render step with basic axNode (role and name) 1`] = `
"<transcript strategies="1" total_steps="1">
    <strategy name="heading" type="heading" mode="browse">
        <description>Heading navigation</description>
        <completion_reason>end-of-headings</completion_reason>
        <steps total="1">
            <step index="0" id="heading-0">
                <spoken>Main Content, heading, level 1</spoken>
                <item_text>Main Content</item_text>
                <ax_node>
                    <role>heading</role>
                    <name>Main Content</name>
                </ax_node>
            </step>
        </steps>
    </strategy>
</transcript>"
`;
